# qwen_mcp_bridge

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-28-chatbot-stats-routing.md  2026-06-29-massing-tool-routing.md  2026-06-29-opts-object-coerce.md
docs/superpowers/specs/: 2026-06-28-chatbot-stats-routing-design.md  2026-06-29-massing-tool-routing-design.md  2026-06-29-opts-object-coerce-design.md
scripts/: smoke_paged_sse.py
src/qwen_mcp_bridge/: __init__.py  _tool_result.py  chat_loop.py  chat_loop_streaming.py  config.py  intent.py  mcp_pool.py  prompts.py  query_policy.py  routing_debug.py  server.py  sse_smoke.py  tool_translation.py  ui_tools.py  visual_filter.py
tests/: conftest.py  test_chat_loop.py  test_chat_loop_streaming.py  test_frontend_css.py  test_intent.py  test_mcp_pool.py  test_parcel_detail_popup.py  test_prompts.py  test_query_policy.py  test_routing_debug.py  test_server.py  test_sse_smoke.py  test_tool_result.py  test_tool_translation.py  test_ui_tools.py  test_visual_filter.py
tests/scenario/: routing_debug_fixture_runner.py  test_existing_buildings.py  test_new_build_candidates.py  test_parcel_detail_and_risk.py  test_routing_debug_fixtures.py
tests/scenario/fixtures/: routing_debug_cases.json
web/: .env.local.example  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
web/public/: ARCHITECTURE.html
web/src/: App.tsx  currentParcelContext.ts  main.tsx  styles.css
web/src/architecture/: AGENTS.md  ArchitectureView.tsx  (+4 more)
(+40 files in other folders)
